# python

./: .gitignore  .replit  README.md  TaqnyatSms.py  bugs.txt  main.py  pyproject.toml  taqnyat.py
Test/: TaqnyatSms.py  test.py  test_taqnyat_sms.py
